# msm-assistant

./: README.md  makefile  pyproject.toml
config/: austin.yaml  casey.yaml  monash_smart_manufacturing_hub.json
src/msm_assistant/: start_assistant.py  test.py
src/msm_assistant/utils/: assistant.py
src/msm_assistant/utils/helper/: configuration.py  controller.py  message.py
src/msm_assistant/utils/helper/controller/: base.py  joycon.py  keyboard.py
src/msm_assistant/utils/helper/tools/: base.py  database_read.py  knowledge_base.py  opcua_read.py  weather.py
src/scripts/: add_collections.py  create_collection.py  create_database.py
src/scripts/utils/: interfaces.py
temp/: chroma.sqlite3  msm.json
temp/printer_docs/: 3d_printer_gantry.json
tests/helper/: test_configuration.py  test_message.py
tests/helper/controller/: test_joycon.py  test_keyboard.py
tests/tools/: test_knowledge_base.py  test_opcua_read.py  test_weather.py
